<resources>
    <string name="app_name">Navii</string>

    <string name="action_settings">Settings</string>

    <string-array name="debug_list">
        <item>Main Application</item>
        <item>Upload Image Test</item>
        <item>Preferences</item>
        <item>Itinerary Schedule</item>
        <item>Onboarding</item>
    </string-array>

    <string-array name="intro_pager_titles">
        <item>Page 1</item>
        <item>Page 2</item>
        <item>Page 3</item>
        <item>Page 4</item>
        <item>Page 5</item>
    </string-array>

    <!-- Drawer Strings -->
    <string name="drawer_home">Home</string>
    <string name="drawer_planned_trips">Planned Trips</string>
    <string name="drawer_saved_trips">Saved Trips</string>
    <string name="drawer_preferences">Preferences</string>
    <string name="drawer_notifications">Notifications</string>
    <string name="drawer_tags">Tags</string>
    <string name="drawer_profile">My Profile</string>
    <string name="drawer_logout">Logout</string>

    <!-- Toolbar Title Strings -->
    <string name="toolbar_home"></string>
    <string name="toolbar_planned_trips">Planned Trips</string>

    <!-- Drawer Identification Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_buzz_feed">BuzzFeedActivity</string>

    <!-- Travel Destination Strings -->
    <string name="destination_header_text">I want\nto go to</string>
    <string name="destination_placeholder_text">TORONTO</string>

    <!-- Travel Duration Strings -->
    <string name="duration_from_text">from</string>
    <string name="duration_to_text">to</string>
    <string name="duration_from_date">September 31, 2016</string>
    <string name="duration_to_date">September 31, 2016</string>z

    <!-- Travel Participants Strings -->
    <string name="participants_header_text">How many travellers?</string>
    <string name="participants_default_adult_numbers">2 Adults</string>
    <string name="participants_default_children_numbers">0 Children</string>

    <!--Preference Fragment Strings    -->
    <string name="preferences_title">Preferences</string>
    <string name="preferences_message">Choose 5 or more that apply! You can change these later in your settings</string>

    <!--Choose Tags Fragment Strings    -->
    <string name="tags_title">Tags</string>
    <string name="tags_message">Select the tags that would interest you the most for your
        trip.</string>
    <string name="next_button_text">Next</string>

    <!-- Itinerary Recommend Fragment Strings-->
    <string name="itinerary_recommend_title">Recommended Itineraries</string>
    <string name="itinerary_recommend_author_title">Created by</string>
    <string name="itinerary_recommend_we_recommend_title">We Recommend</string>
    <string name="itinerary_recommend_plan_trip">Plan your own Trip</string>
    <string name="itinerary_recommend_package_description_title">Overview</string>

    <!-- Profile -->
    <string name="profile_title">Your Profile</string>
    <string name="profile_email">E-mail Address</string>
    <string name="profile_facebook">A Facebook Account?</string>
    <string name="profile_preferences_button">My Preferences</string>


    <!-- EditProfile Fragment Strings-->
    <string name="new_user">new user</string>
    <string name="Change_Username">Change Username</string>
    <string name="new_email">New Email:</string>
    <string name="change_email">Change Email</string>

    <!-- Travel Parameter Fragment Strings -->
    <string name="select_traveler_number">Select the number of travellers</string>
    <string name="select_travel_budget">Budget your trip</string>

    <!-- ChangePasswordFragment Strings -->
    <string name="current_password_text">Current Password</string>
    <string name="new_password_text">New Password</string>
    <string name="repeat_new_password_text">Repeat New Password</string>
    <string name="change_password_button">Change Password</string>

    <!-- WifiDialogFragment Strings -->
    <string name="no_wifi_message">"No Connection Detected."</string>
    <string name="reconnect_message">"Reconnect"</string>

    <!-- Buttons -->
    <string name="next">"Next"</string>

    <!-- Package Overview -->
    <string name="package_overview_title">Package Overview</string>
    <string name="package_overview_select">Select</string>

    <!-- Heart and Soul -->
    <string name="heart_and_soul_title">Heart and Soul</string>
    <string name="heart_and_soul_select">Select</string>

    <!-- Heart and Soul Details Strings -->
    <string name="heart_and_soul_details_title">Heart and Soul Details</string>
    <string name="delete">delete</string>
    <string name="start_time_title">Start Time:</string>

    <!-- Heart and Soul Save -->
    <string name="heart_and_soul_save_title">Save Your Itinerary</string>
    <string name="heart_and_soul_save_name_hint">Itinerary Name</string>
    <string name="hear_and_soul_make_trips">No Trips found, why not create one?</string>
    <string name="hear_and_soul_make_trips_prompt">Make a Trip</string>

    <string-array name="onboarding_titles">
        <item>Your personal travel agent right at your fingertips.</item>
        <item>Browse destination packages that fit your schedule.</item>
        <item>Book your hotel, flight, and attraction passes.</item>
        <item>Hit up local hot spots and events tailored to you.</item>
    </string-array>

    <!-- Login -->
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_email_button_text">Login with E-mail</string>
    <string name="login_fb_button_text">Login with Facebook</string>
    <string name="login_or">or</string>
    <string name="login_sign_up">Sign Up</string>

    <!-- Sign Up -->
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_full_name_hint">Full Name</string>
    <string name="sign_up_email_hint">E-mail</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_password_again_hint">Retype Your Password</string>
    <string name="sign_up_button">Sign Up</string>

    <!-- Thank You -->
    <string name="thank_you_title">You have successfully signed up!</string>
    <string name="thank_you_button">Start</string>

    <!-- Errors -->
    <string name="error_steve_fucked_up">Steve CENSORED up</string>
    <string name="error_dialog_title">An error occurred</string>
    <string name="error_okay">Okay</string>
    <string name="error_network">Network error occurred.</string>
    <string name="error_unknown">Unknown error.</string>
    <string name="error_login_validation">Login failed. Verify your email and password</string>
    <string name="error_signup_validation">Sign Up failed. Email may already exist.</string>

    <!-- Facebook integration -->
    <string name="facebook_app_id">521481071395718</string>

    <!-- Login -->
    <string name="user_name_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="email_sign_up"><b>Sign Up!</b></string>
    <string name="facebook_sign_in">Continue with Facebook</string>
    <string name="password_hint">Password</string>
    <string name="creation_ToS">Creation of an account means you\'re a-okay with our <b>terms of services</b>.</string>
    <string name="login">Already have an account? <b>LOGIN</b></string>
    <string name="tos_legal_stuff">Lorem Ipsum is simply dummy text of the printing and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting industry. orem Ipsum is simply dummy text of the printing and typesetting iorem Ipsum is simply dummy text of the printing and typesetting iorem Ipsum is simply dummy text of the printing and typesetting iorem Ipsum is simply dummy text of the printing and typesetting iLorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="ok">OK</string>
    <string name="menu_title">Options</string>

    <!-- Prefetch Page Constants-->
    <string name="eat_item_title">Eat</string>
    <string name="see_item_title">See</string>
    <string name="google_maps_search">Search</string>
    <string name="already_saved">Trip Saved</string>
    <string name="custom_item_title">Custom</string>

</resources>