<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_layout"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_name_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_up_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_full_name_hint"
                    android:textColor="@color/grey_primary"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_up_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_email_hint"
                    android:textColor="@color/grey_primary"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_up_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/grey_primary"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/sign_up_password_again_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/sign_up_password_again_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_up_password_again_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/grey_primary"/>
            </android.support.design.widget.TextInputLayout>

            <com.teamawesome.navii.views.MainLatoButton
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/orange_rounded_button_background"
                android:text="@string/sign_up_button"
                android:textColor="@android:color/white"
                app:fontType="Medium"/>

        </LinearLayout>

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/include_toolbar_no_nav"/>

    </RelativeLayout>
</ScrollView>