<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    android:id="@+id/travel_participants">

    <com.teamawesome.navii.views.MainLatoTextView
        android:id="@+id/travel_participants_header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/participants_header_text"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="40dp">

            <View
                android:id="@+id/travel_participants_adult_up_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle_plus_button"/>

            <com.teamawesome.navii.views.MainLatoTextView
                android:id="@+id/travel_participants_adult_text"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/participants_default_adult_numbers"
                android:textColor="@android:color/white"/>

            <View
                android:id="@+id/travel_participants_adult_down_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle_minus_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingRight="40dp">

            <View
                android:id="@+id/travel_participants_child_up_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle_plus_button"/>

            <com.teamawesome.navii.views.MainLatoTextView
                android:id="@+id/travel_participants_child_text"
                android:layout_width="120dp"
                android:layout_height="42dp"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/participants_default_children_numbers"
                android:textColor="@android:color/white"/>

            <View
                android:id="@+id/travel_participants_child_down_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/circle_minus_button"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>